Removendo Connection string e alterando a senha do BD na Azure

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:cassiasqlserver.database.windows.net,1433;Initial Catalog=AiSupportDb;Persist Security Info=False;User ID=cassiatechnology;Password=WyY3VjMMRhLZpJV;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": ""
   }
 }
